--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,10 @@ cython_debug/
 
 # Files
 code/votekit_election_sampling.py
+figures/older/
 data/
 *.sh
 *.txt
+batch/four_party_sample_collect2.py
+batch/four_party_sample_collect3.py
+batch/two_party_sample_collect2.py
