--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ data/
 batch/four_party_sample_collect2.py
 batch/four_party_sample_collect3.py
 batch/two_party_sample_collect2.py
+batch/four_party_sample_collect4.py
+batch/two_party_sample_collect3.py
