--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = "^3.10, <3.13"
+python = "^3.9, <3.13"
 pulp = "^2.9.0"
-numpy = "^2.1.0"
+numpy = "^1.26.0"
+pandas = "^1.5.0"
+matplotlib = "^3.9.0"
+seaborn = "^0.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
