--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9, <3.13"
+numpy = ">=1.26.0"
+pandas = ">=1.5.3"
+matplotlib = "^3.9.3"
+seaborn = "^0.13.2"
 pulp = "^2.9.0"
-numpy = "^1.26.0"
-pandas = "^1.5.0"
-matplotlib = "^3.9.0"
-seaborn = "^0.13.0"
+votekit = "^3.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
