--- a/.gitignore
+++ b/.gitignore
@@ -163,13 +163,12 @@ cython_debug/
 
 
 # Files
+*.txt
+*.sh
+*.log
 data/
 
 experiments/scottish_data/
-experiments/*/*.sh
-experiments/*/*.txt
-experiments/*/*.log
-
 
 examples/stv_tiebreak.py
 examples/2bloc.ipynb
