--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.9.3"
 seaborn = "^0.13.2"
 pulp = "^2.9.0"
 votekit = "^3.0.0"
+gurobipy = "^12.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
